LSP-364 [lsp] fix fileTemplates loading
1. Switch to platform PathClassLoader
2. Build LSP zips with dir index

GitOrigin-RevId: 1e1aca960d41f7f2d2bf67b0b2b637f36408f618